force-app/main/default/objects/AV_ManagementHistory__c/AV_ManagementHistory__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene el historico de gestión</description>
    <label>Histórico de gestión</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Histórico de gestión Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de gestión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>