force-app/main/default/objects/AV_ManagementHistory__c/fields/AV_ActivityId__c.field-meta.xml
<CustomField>
    <fullName>AV_ActivityId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividad relacionada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>