force-app/main/default/objects/AV_ManagementHistory__c/fields/AV_Comment__c.field-meta.xml
<CustomField>
    <fullName>AV_Comment__c</fullName>
    <description>Campo para almacenar el comentario del historico de gestión</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>