force-app/main/default/objects/AV_ManagementHistory__c/fields/AV_Date__c.field-meta.xml
<CustomField>
    <fullName>AV_Date__c</fullName>
    <description>Campo para la fecha del historico de gestión</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>