force-app/main/default/objects/AV_ManagementHistory__c/fields/AV_Reminder__c.field-meta.xml
<CustomField>
    <fullName>AV_Reminder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recordatorio</label>
    <type>DateTime</type>
</CustomField>