force-app/main/default/objects/AV_ManagementHistory__c/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <description>Campo para almacenar el valor del tipo del histórico de gestión</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTO</fullName>
                <label>Cita en la oficina</label>
            </value>
            <value>
                <fullName>CTF</fullName>
                <label>Cita telefónica</label>
            </value>
            <value>
                <fullName>VLD</fullName>
                <label>Videollamada</label>
            </value>
            <value>
                <fullName>CTOOC</fullName>
                <label>Cita en otra oficina CaixaBank</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Visita del gestor</label>
            </value>
            <value>
                <fullName>LMD</fullName>
                <label>Llamada</label>
            </value>
            <value>
                <fullName>ESE</fullName>
                <label>Email,sms,etc</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>Muro</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Visita Cliente</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Llamada telefónica</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Entrevista centro</label>
            </value>
            <value>
                <fullName>OFT</fullName>
                <label>Tarea Oficina</label>
            </value>
            <value>
                <fullName>GSCC</fullName>
                <label>Gestión sin contacto comercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>